# jarvis-OS

./: .env.example  .gitignore  CDC_refonte_architecture.md  LICENSE  Makefile  README.md  install.sh  jarvis-skills-index.json  jarvis.ps1  main.py  pyproject.toml  setup.ps1  setup.sh  voice_agent.py
.github/workflows/: ci.yml
agent/: capability_engine.py  orchestrator.py  project_manager.py  project_store.py  reflexion.py  schemas.py  verifier.py  worker_agent.py
agent/backends/: rpc.py
analytics/widgets/: github.py  youtube.py
api/: admin.py  http.py  http_budget.py  http_chat.py  http_config.py  http_curator.py  http_memory.py  http_proactive.py  http_skills.py  http_system.py  macropad_2k.py  projects.py  voice_ws.py  websocket.py
background/: notifications.py  scheduler.py  worker.py
channels/: gateway.py  telegram_bot.py
config/: approvals.json  backends.py  settings.py
core/: agent.py  gateway.py  vocab.py
docs/architecture/: INTEGRATION-DONE.md  events.md  skills-abi.md
docs/migration/: BACKLOG.md  gates_B8_B9.md
kernel/: contracts.py  events.py  schemas.py
llm/: api.py  base.py  local.py
macropad_2k/: __init__.py  arduino_cli.py  firmware_gen.py  flasher.py  launcher.py  profile_store.py
memory/: auto_dream.py  consolidation.py  ingest.py  mirror.py  retrieval.py  schemas.py  search.py
proactive/: command_center.py  curator.py  engine.py  executor.py  initiative_generator.py  schemas.py  store.py
proactive/collectors/: base.py  calendar.py  email.py  news.py  tasks.py  weather.py
prompts/: system_static.md
scripts/: dry_run_preset.py  install_arduino_cli.py  install_local_extension.py  observe_kernel_ingest.py  phase1_real_mission.py  phase2_real_reflexion.py  phase3_real_ingestion.py  phase4_real_skill_lab.py  phase5_real_capability.py  phase6_real_proactive_curator.py  preview_view.py  test_llm.py  uninstall_local_extension.py
scripts/migration/: audit_imports.py  audit_imports.sh  check_paths_runtime.py  data_state.baseline.txt  routes.baseline.txt  snapshot_data_state.py  snapshot_routes.py
scripts/release/: build_bundle.ps1  build_bundle.sh  rehome_bundle.ps1  rehome_bundle.sh
scripts/validation/: phase1_real_mission.py  (+6 more)
skills/: base.py  catalog.json  executor.py  installer.py  lab.py  registry.py  synthesizer.py
tests/: test_audio_chunker.py  test_audit.py  test_auth.py  test_auto_dream_deep.py  test_backends.py  test_budget.py  test_budget_api.py  test_bundle.py  test_capability_engine.py  test_channels.py  test_cli_security.py  test_connectivity.py  test_dev_extensions_inert.py  test_dry_run_preset.py  test_file_lock.py  test_gateway.py  test_governance.py  test_http_memory_trigger_deep.py  test_ihex.py  test_ingest.py  test_initiatives.py  test_install_local_extension.py  test_kernel.py  test_kernel_errors.py  test_kernel_events.py  test_llm_base.py  test_llm_tools.py  test_local_mode.py  test_macropad_paths.py  test_memory.py  test_memory_recall.py  test_mirror.py  test_mission_engine.py  test_ollama_tools.py  test_permissions.py  test_phase0_schemas.py  test_phase6_curator_and_initiatives.py  test_phase_d_bus_wiring.py  test_pricing_schemas.py  test_reflexion.py  (+18 more)
tools/: capability.py  fusion.py  memory.py  preset.py  registry.py  show_view.py
(+284 files in other folders)
